--- a/.gitignore
+++ b/.gitignore
@@ -2,40 +2,40 @@
 *.d
 
 # Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+**.slo
+**.lo
+**.o
+**.obj
 
 # Precompiled Headers
-*.gch
-*.pch
+**.gch
+**.pch
 
 # Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+**.so
+**.dylib
+**.dll
 
 # Fortran module files
-*.mod
-*.smod
+**.mod
+**.smod
 
 # Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+**.lai
+**.la
+**.a
+**.lib
 
 # Executables
-*.exe
-*.out
-*.app
+**.exe
+**.out
+**.app
 
-*.doj
-*.project
-*.xml
-*.dxe
-*.mk
+**.doj
+**.project
+**.xml
+**.dxe
+**.mk
 
 /DSPFramework/Release/*
 /DSPFramework/Debug/*
